--- a/docs/examples/random.ipynb
+++ b/docs/examples/random.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from geowanhee.common import create_25_Random_points"
+    "from geowanhee.common import Create_25_Random_points"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_25_Random_points()"
+    "Create_25_Random_points()"
    ]
   }
  ],
